# nu_plugin_bigint

./: Cargo.toml  README.md  default.nix  flake.nix
src/: main.rs
src/commands/: bigint.rs  mod.rs
src/values/: bigint.rs  mod.rs
