[package]
name = "nu_plugin_bigint"
version = "0.1.0"
authors = ["Talia-12 <paradox.m.burgess@gmail.com>"]
edition = "2021"
description = "a nushell plugin called bigint"
repository = "https://github.com/Talia-12/nu_plugin_bigint"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.96.0"
nu-protocol = { version = "0.96.0", features = ["plugin"] }

[dev-dependencies]
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
nu-plugin-test-support = { version = "0.96.0" }
