[package]
name = "nu_plugin_bigint"
version = "0.1.0"
authors = ["Talia-12 <paradox.m.burgess@gmail.com>"]
edition = "2021"
description = "a nushell plugin called bigint"
repository = "https://github.com/Talia-12/nu_plugin_bigint"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.97.1"
nu-protocol = { version = "0.97.1", features = ["plugin"] }
rug = { version = "1.26.1", features = ["serde"] }
serde = "1.0.210"
typetag = "0.2.18"

[dev-dependencies]
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
nu-plugin-test-support = { version = "0.97.1" }
